change light/dark color theme and fix alignment in the results cards

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ light gray: #F4F4F4
 
 :root,
 :root.light {
+  --body-bg: #1C1C1C;
 	--color-bg: #F4F4F4;
 	--li-color-bg: #fff;
 	--p-color: #353535;
@@ -12,6 +13,7 @@ light gray: #F4F4F4
 }
 
 :root.dark {
+  --body-bg: #F4F4F4;
 	--color-bg: #1F2937;
 	--li-color-bg: #273549;
 	--p-color: #FFFFFF;
@@ -27,7 +29,7 @@ html {
 
 body {
     margin: 0;
-    background-color: #1C1C1C;
+    background-color: var(--body-bg);
     text-align: center;
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
@@ -39,11 +41,9 @@ body {
 
 .container {
     margin: auto;
+    margin-top: 64px;
     min-width: 360px;
     width: 33dvw;
-    display: flex;
-    flex-direction: column;
-    border-radius: 4px;
 }
 
 .header {
@@ -54,6 +54,7 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 16px;
+    border-radius: 8px 8px 0 0;
 }
 
 input {
@@ -81,6 +82,7 @@ button {
 .results {
     background-color: var(--color-bg);;
     padding: 16px 24px;
+    border-radius: 0 0 8px 8px;
 }
 
 h1 {
@@ -94,6 +96,7 @@ h2 {
     color: var(--h2-color);
     font-size: 16px;
     font-weight: 700;
+    flex: 0;
 }
 
 p {
@@ -101,6 +104,7 @@ p {
     color: var(--p-color);
     font-size: 14px;
     font-weight: 400;
+    flex: 1;
 }
 
 ul {
@@ -116,13 +120,16 @@ li {
     background-color: var(--li-color-bg);;
     padding: 12px;
     border-radius: 4px;
-    display: flex;
+    display: grid;
     gap: 12px;
+    height: 90px;
 }
 
+
+/* Light/Dark mode mechanics */
+
 .toggle {
-    display: flex;
-    justify-content: center;
+    display: inline-flex;
     align-items: center;
     margin-top: 12px;
 }
